<resources>
    <string name="app_name">HyTe_Projekti</string>
    <string name="text_choose">Choose yourself a main goal</string>
    <string name="button_muscle">Build muscle mass</string>
    <string name="button_weightloss">Lose weight</string>
    <string name="button_maintaining">Maintain your fitness level</string>
    <string name="text_weightloss">Let\'s lose weight!</string>
    <string name="text_buildmuscle">Let\'s build muscle mass!</string>
    <string name="text_fitnesslevel">Let\'s maintain your fitness level!</string>
    <string name="button_mainToMenu">Go to menu</string>
    <string name="text_buildMuscleIntro">Start creating your weekly plan by selecting \'Create plan\'</string>
    <string name="text_buildMuscleIntro2">or go back to choose a different program</string>
    <string name="button_BuildMuscleIntro">Create plan</string>
    <string name="text_muscleInfoName">Info name</string>
    <string name="text_muscleInfoGuideline">Info Guideline</string>
    <string name="text_muscleInfoExercises">Info Exercises</string>
    <string name="text_infoMuscleOptions">Info Options</string>
    <string name="button_addToPlan">Add to weekly plan</string>
</resources>
